# ilibc

./: meson.build
include/: string  unordered_map  vector
src/cxx/: string.cpp  vector.cpp
